syntax = "proto3";

package clip;

message Message {
    oneof msg {
        Text text = 1;
        FileHeader hdr = 2;
        Chunk chunk = 3;
        NextChunk nextChunk = 4;
        Ack ack = 5;
        Error err = 6;
    }
}

message Text {
    string data = 1;
}

message FileHeader {
    string filename = 1;
    string contentType = 2;
    int32 numChunks = 3;
}

message Chunk {
    int32 index = 1;
    bytes data = 2;
}

message NextChunk {}

message Ack {}

message Error {
    string desc = 1;
}
